data/derived/fa15/progs/unify/prog4060.ml.out
Characters 55-61:
  in helper
     ^^^^^^
Error: This expression has type bool -> bool
       but an expression was expected of type bool -> bool * bool
       Type bool is not compatible with type bool * bool 
